@@ -10,29 +10,23 @@
     </startup>
     <userSettings>
         <Virtual_Crosshair.Properties.Settings>
-            <setting name="Image" serializeAs="String">
-              <!--
-                  Possible Choices
-                  
-                  RoundedRedCenter.png
-                  RoundLines.png
-                  SquaredSpaces.png
-                  TinyRed.png
-              -->
-                <value>TinyRed.png</value>
-            </setting>
             <setting name="Monitor" serializeAs="String">
-              <!--
-                  Possible Choices
-                  
-                  Primary
-                  Secondary
-                  1
-                  2
-                  3
-                 
-              -->
-                <value>2</value>
+                <value>Primary</value>
+            </setting>
+            <setting name="SelectedMonitorIndex" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="SelectedImageIndex" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="HorizontalOffset" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="VerticalOffset" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Scaling" serializeAs="String">
+                <value>1</value>
             </setting>
         </Virtual_Crosshair.Properties.Settings>
     </userSettings>
